applied new, better approach